# decksage

./: .cursorignore  .cursorignore 3  .cursorrules  .doc-guard  .dockerignore  .enrichment-complete-oct-5  .env 2.example  .env.example  .final-status-oct-5  .git_workaround.sh  .gitignore  .golangci.yml  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  .ruff.toml  .session-complete  .yamllint.yml  ARCHITECTURE_REVIEW.md  ARCHITECTURE_SOLUTIONS.md  CHANGELOG.md  COMMANDS.md  DATA_STORAGE.md  DATA_USAGE.md  DEEP_REVIEW_REPORT.md  DEEP_REVIEW_TRIAGED_ACTIONS.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile 2  Dockerfile.api  ENRICHMENT_SUMMARY.txt  FINAL_VERIFICATION.sh  LICENSE  Makefile  PAUSE_RESUME_GUIDE.md  PIPELINE_COHERENCE_COMPLETE.md  PIPELINE_COHERENCE_SUMMARY.md  PRE_SLEEP_STATUS.txt  PRIORITY_MATRIX.md  QUICK_REFERENCE.md  (+28 more)
.aim/: run_metadata.sqlite
.github/: BRANCH_PROTECTION.md  CODEOWNERS  COMPLETE_SETUP.txt  PULL_REQUEST_TEMPLATE.md  REPOSITORY_METADATA.md  REPOSITORY_METADATA_FINAL.md  REPOSITORY_METADATA_REVISED.md  REVIEW_COMPLETE.md  SECURITY.md  SUMMARY.txt  TOPICS.md  apply_metadata.sh  dependabot.yml  description  protect-branch.sh
annotations/: .monitor_state.json  README.md  analytics.json  analytics_report.json  batch_001_initial.yaml  batch_002_expansion.yaml  batch_auto_generated.yaml  browser_annotation_Delver_of_Secrets____Insectile_Aberration.html  browser_annotation_Galvanic_Iteration.html  browser_annotation_Martyr's_Cause.html  browser_annotation_Scrabbling_Claws.html  browser_annotation_Stalking_Tiger.html  cohesion-improvements.md  comparison_latest.json  comparison_submission_results.json  complete-debug-summary.md  cursor-rules-updates.md  deep_analytics.json  duplicate_conflicts.json  e2e_test_results.json  enhanced_final.jsonl  enrichment_dashboard.html  final-integration-status.md  final_expanded_stats.json  final_integrated.jsonl  final_quality.json  hand_batch_magic_enhanced.yaml  hand_batch_pokemon.yaml  hand_batch_pokemon_enhanced.yaml  hand_batch_pokemon_retrofitted.yaml  hand_batch_yugioh.yaml  hand_batch_yugioh_enhanced.yaml  hand_batch_yugioh_retrofitted.yaml  health_check_latest.json  health_report.json  high_frequency_edge_candidates.jsonl  iaa_uncertainty_test_results.json  integrated_test.jsonl  integration-status.md  integration-summary.md  (+83 more)
data/: DATASET_METADATA.json  DATA_INDEX.json  DATA_LINEAGE_METADATA.json  DATA_LOCATIONS.md  README.md  data-layout.md  data-lineage-metadata.json  metadata_cache.json  scraping_targets.json  test_set_minimal.json  to_prune.json
debug/: gaps.html  index.html  similarity-demo.html
deploy/: ALL_SERVICES_AVAILABLE.md  DNSSEC_STATUS.md  DOCKER_OPTIMIZATION.md  START_SERVICES.md  aws-route53-setup.md  flyio-setup.md  flyio-setup.sh
docs/: AGENT_DEPLOYMENT_GUIDE.md  CRITICAL_REVIEW_TRAINCTL_METHODS_TASKS.md  CROSS_GAME_EMBEDDINGS_ANALYSIS.md  DATA_LINEAGE_FLOW.txt  DEEP_STRUCTURE_ANALYSIS.md  DEPLOYMENT.md  DEVELOPMENT_RULES.md  FUTURE_TRAINING_RUNCTL.md  GOLD_DATA_REFINEMENT.md  LINEAGE_INTEGRATION_CHECKLIST.json  LLM_JUDGMENTS_PIPELINE.md  LLM_LABELS_LINEAGE.md  PRIORITY_MATRIX 2.md  PRIORITY_MATRIX.md  QUICK_REFERENCE 2.md  QUICK_REFERENCE.md  TOOLING_ENFORCEMENT.md  TOOLING_TEST_RESULTS.md  TOP_LEVEL_STRUCTURE_REVIEW.md  VISUAL_EMBEDDINGS_EVALUATION_GUIDE.md  VISUAL_EMBEDDINGS_INTEGRATION_PLAN.md  VISUAL_EMBEDDINGS_MISSING_HANDLING.md  VISUAL_EMBEDDINGS_NEXT_STEPS.md  VISUAL_EMBEDDINGS_PIPELINE_INTEGRATION.md  VISUAL_EMBEDDINGS_QUICKSTART.md  VISUAL_EMBEDDINGS_RECOMMENDATION.md  VISUAL_EMBEDDINGS_REFINEMENTS.md  VISUAL_EMBEDDINGS_TESTING.md  VISUAL_EMBEDDINGS_USAGE.md  data-storage.md  development-rules.md  lineage-integration-checklist.json  priority-matrix.md  quick-reference.md  training-instances.md
experiments/: CURRENT_BEST_magic.json  DATA_SOURCES.md  ENHANCED_EVALUATION_COMPLETE.md  EVALUATION_TASK_DESIGN.md  EVAL_DATA_GENERATION_COMPLETE.md  EXPERIMENT_LOG_CANONICAL.jsonl  FINAL_EVALUATION_SYSTEM_SUMMARY.md  README.md  README_LOGS.md  REALITY_CHECK.txt  VISUAL_EMBEDDINGS_COMPLETE_SUMMARY.md  VISUAL_EMBEDDINGS_EVALUATION_FINAL.md  VISUAL_EMBEDDINGS_EVALUATION_RESULTS.md  audit.html  audit_deck_completion.html  audit_similarity.html  cross_game_metrics.json  dashboard.html  evaluation_report.html  evaluation_report_latest.html  fusion_grid_search_latest.json  index.html  llm_judge_report.html  llm_judge_report.json  test_set_batch002.json  test_set_canonical_magic.json  test_set_canonical_pokemon.json  test_set_canonical_yugioh.json  training_data_with_feedback.jsonl
notebooks/: card_similarity_comparison.ipynb
output=experiments/: test_set_comprehensive.json
paper/: findings.tex  main.tex  references.bib
scripts/: FINAL_VERIFICATION.sh  README.md  add_substitution_pairs_to_graph.py  aggregate_user_feedback.py  analyze_idle_instances.py  apply_all_fixes.sh  archetype_staples.py  auto_compare_when_ready.py  backfill_metadata.py  card_companions.py  check_extraction_progress.sh  check_runctl_status.sh  clean-docs.sh  combine_and_train_annotations.sh  compare_annotated_vs_baseline.py  comprehensive_knowledge_validation.py  compute_cross_game_metrics.py  create_ssm_role.sh  dataset_health_check.py  deck_composition_stats.py  deploy_multitask_embeddings.sh  enhance_exported_decks.py  evaluate_instruction_embeddings.py  execute_all_next_steps.sh  expand_scraping.sh  export_and_unify_all_decks.py  export_missing_decks.py  (+53 more)
src/annotation/: .rustfmt.toml  Cargo.toml  README.md
src/annotation/src/: candidate.rs  eval.rs  gnn.rs  lib.rs  main.rs  query.rs  signals.rs  similarity.rs  test_set.rs
(+1907 files in other folders)
